# lzdb

./: .gitignore  README.md  lzdb.py  pyproject.toml  setup.py  test.py  test_create.py  test_create_fn.py  test_read.py  test_read_fn.py
lzdb/: __init__.py  lzdb.py
tests/: test_create.py  test_read.py  test_read_fn.py
