[project]
name = "lzdb"
version = "1.1.0"
authors = [
  { name="Fabien Bouleau", email="fabien.bouleau@gmail.com" },
]
description = "Lazy Database"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/fboule/lzdb"
Issues = "https://github.com/fboule/lzdb/issues"
