[project]
name = "lzdb"
version = "1.1.1"
authors = [
  { name="Fabien Bouleau", email="fabien.bouleau@gmail.com" },
]
description = "Lazy Database"
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["lzdb", "gplv3", "python"]

[project.urls]
Homepage = "https://github.com/fboule/lzdb"
Issues = "https://github.com/fboule/lzdb/issues"
