[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lzdb2"
version = "1.3.0"
authors = [
  { name="Fabien Bouleau", email="fabien.bouleau@gmail.com" },
]
description = "Lazy Database"
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["lzdb2", "gplv3", "python"]
dependencies = [
    "pandas>=2.0",
    "matplotlib",
    "numpy",
    "psycopg"
]

[project.urls]
Homepage = "https://github.com/fboule/lzdb"
Issues = "https://github.com/fboule/lzdb/issues"
